--- a/ClassPagesPrototype1 (1).html
+++ b/ClassPagesPrototype1 (1).html
@@ -3,19 +3,19 @@
         <title>John Harold Doe XVIth Page</title>
     </head>
     <body>
+        <h1 id="title" style="color:bisque;">Heylo</h1>
+        <h2 id="info" style="color:grey;">How are you?!</h2>
         <script>
             //Here is where information would be imported from the databases:
-            const last_name="Doe";
-            const first_name="John";
-            const classroom_num="72";
+            var last_name="Doe";
+            var first_name="John";
+            var classroom_num="72";
             //Here is the code for formatting that information:
-            const titleText=first_name+" "+last_name+"\'s Classroom Info & Current Status:";
-            const basicRoomInfo=classroom_num+"|";
+            var titleText=first_name+" "+last_name+"\'s Classroom Info & Current Status:";
+            var basicRoomInfo=classroom_num+"|";
             //Here's the code for making useable objects out of the info and adding it to an HTML object:
-            document.getElementById("title").innerHTML=titleText;
-            document.getElementById("info").innerHTML=basicRoomInfo;
+            document.getElementById("title").innerHTML = titleText;
+            document.getElementById("info").innerHTML = basicRoomInfo;
         </script>
-        <h1 id="title" style="color:bisque;"></h1>
-        <h2 id="info" style="color:grey;"></h2>
     </body> 
 </html>
