--- a/ClassPagesPrototype1 (1).html
+++ b/ClassPagesPrototype1 (1).html
@@ -4,12 +4,27 @@
     </head>
     <body>
         <h1 id="title" style="color:bisque;">Heylo</h1>
-        <h2 id="info" style="color:grey;">How are you?!</h2>
+        <h2 id="info" style="color:black;">How are you?!</h2>
+        <p id="openOrNo" style="color:grey;">Closed</p>
+        <p id="notices" style="color:purple;">La terre vient de exploser. Merci pour ton temps!</p>
+        <p id="fill" style="color:">N/A</p>
         <script>
             //Here is where information would be imported from the databases:
-            var last_name="Doe";
-            var first_name="John";
-            var classroom_num="72";
+            var whenOpen="A-Lunch Only"; //Syntax: A-Lunch Only, B-Lunch Only, All Lunch
+            var openClosed="Closed"; //Syntax: Closed, Open
+            var openStatus="Office Hours"; //Syntax: Office Hours, Quiet Lunch, Normal Lunch
+            var notices=[]; //Individual messages are in the form of strings and displayed in the order of this list
+            var fillStatus="Full"; //Syntax: Full, Almost Full, Some Space, Much Space, Empty, N/A (for closed) 
+            //Below is the logic for changing the text so that it can be formatted properly later:            
+            if (openClosed=="Closed"){
+                openStatus="everyone";
+                if (whenOpen=="A-Lunch Only"){
+                    whenOpen="B-Lunch Only";
+                }
+                else if (whenOpen=="B-Lunch Only"){
+                    whenOpen="A-Lunch Only";
+                }
+            }
             //Here is the code for formatting that information:
             var titleText=first_name+" "+last_name+"\'s Classroom Info & Current Status:";
             var basicRoomInfo=classroom_num+"|";
