--- a/ClassPagesPrototype1 (1).html
+++ b/ClassPagesPrototype1 (1).html
@@ -10,6 +10,9 @@
         <p id="fill" style="color:">N/A</p>
         <script>
             //Here is where information would be imported from the databases:
+            var last_name="Doe";
+            var first_name="John";
+            var classroom_num="72";
             var whenOpen="A-Lunch Only"; //Syntax: A-Lunch Only, B-Lunch Only, All Lunch
             var openClosed="Closed"; //Syntax: Closed, Open
             var openStatus="Office Hours"; //Syntax: Office Hours, Quiet Lunch, Normal Lunch
