--- a/ClassPagesPrototype1 (1).html
+++ b/ClassPagesPrototype1 (1).html
@@ -12,7 +12,7 @@
             <ol id="notices" style="color:purple;">
                 
             </ol>
-            <p id="fill" style="color:">N/A</p>
+            <p id="fill" style="color:orange">N/A</p>
             <div1 id="schedules" style="color:aquamarine">
                 <p style="color:aqua">Monday:</p>
                 <p id="monday"></p>
