--- a/ClassPagesPrototype1 (1).html
+++ b/ClassPagesPrototype1 (1).html
@@ -7,8 +7,8 @@
             <h1 id="title" style="color:bisque;">Heylo</h1>
             <h2 id="info" style="color:black;">How are you?!</h2>
             <p id="openOrNo" style="color:grey;">Closed</p>
-            <p id="when" style="color:blue;">All Lunch</p>
-            <p id="status style="color:light-blue;"></p>
+            <p id="when" style="color:rgb(255, 248, 47);">All Lunch</p>
+            <p id="status style="color:green;"></p>
             <ol id="notices" style="color:purple;">
                 
             </ol>
