--- a/web-design/index.html
+++ b/web-design/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form id="form" onsubmit="return false;">
+        <input style="position:absolute; top:80%; left:5%; width:40%;" type="text" id="userInput" />
+        <input style="position:absolute; top:50%; left:5%; width:40%;" type="submit" onclick="othername();" />
+    </form>
 </body>
 </html>
